<resources>
    <string name="app_name">UK Tourist Information</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="main_menu_info">
        Welcome to the Citizens of the World tourist information app. This app will give you
        information about sites and attractions which you can visit in the north of England.
        Please click one of the options below to use the application.
    </string>
    <string name="main_menu_settings_button">Settings</string>
    <string name="main_menu_places_button">Places to Visit</string>
    <string name="place_icon">Place Icon</string>
    <string name="name_title">Name:</string>
    <string name="location_title">Location:</string>
    <string name="geolocation_title">Geolocation</string>
    <string name="description_title">Description</string>
    <string name="title_activity_places">Places To Visit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="options">Options</string>
    <string name="main_menu_budget">Budget Planner</string>
    <string name="title_activity_budget_planner">Budget Planner</string>
    <string name="price">Price</string>
    <string name="description_image">Description Image</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
