<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.cet325.bg47hb.MainMenu"
    android:padding="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_menu_title"
            android:id="@+id/textView_MenuTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_info"
            android:id="@+id/textView_MenuInfo"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_menu_places_button"
            android:id="@+id/textView_MenuPlaces"
            android:layout_gravity="center_horizontal"
            android:onClick="GoToPlaces"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_menu_budget"
            android:id="@+id/textView_MenuBudget"
            android:layout_gravity="center_horizontal"
            android:onClick="GoToBudget"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_menu_settings_button"
            android:id="@+id/textView_MenuSettings"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:onClick="GoToSettings"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
